--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./dist/images/favicon-32x32.png"
+      href="favicon-32x32.png"
     />
     <link rel="stylesheet" href="./dist/css/main.css" />
 
@@ -49,7 +49,7 @@
           <h1 class="heading">Build The Community Your Fans Will Love</h1>
           <p class="heading__sub">
             Huddle re-imagines the way we build communities. You have a voice,
-            but so does your audience.Create connections with your users as you
+            but so does your audience. Create connections with your users as you
             engage in genuine discussion.
           </p>
           <a href="#" class="btn btn--white btn--animated">Register</a>
